# scratch

./: .gitignore  LICENSE  README.md  project_structure.txt  pyproject.toml
docs/spotify/: README.md
src/spotify/: __init__.py  playlist_csv_converter.py  playlist_downloader.py  pyproject.toml
tests/test_spotify/: __init__.py  test_playlist_converter.py  test_playlist_downloader.py
