[project]
name = "scratch"
version = "0.0.0"
description = "Personal projects and experiments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]
authors = [
    { name = "James Edgell", email = "" }
]

[project.scripts]
spotify-download = "spotify.playlist_downloader:download_my_playlists"
spotify-convert = "spotify.playlist_csv_converter:combine_playlists_to_csv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]