[project]
name = "scratch"
version = "0.0.1"
description = "Personal projects and experiments"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "James Edgell", email = "" }
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]