[project]
name = "spotify-playlist-manager"
version = "0.0.0"
description = "A Python package for managing Spotify playlists"
requires-python = ">=3.9"
authors = [
    { name = "James Edgell", email = "" }
]

dependencies = [
    "spotipy>=2.23.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 